Add script and API key to interests page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,14 @@
    background-color: #9b59b6; 
 }
 
+.bg-color-conferences {
+    background-color: #f4f4f4;
+}
+
+.bg-color-groups {
+    background-color: #ffffff;
+}
+
 .bg-color-contact {
     background-color: #fff;
 }
