Add js folder and maps.js file to display map

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -357,7 +357,13 @@ footer {
     margin-bottom: 30px;
 }
 
-/* ----------------------------------------------Contact Form */
+/* ----------------------------------------------- Maps */
+
+#map {
+    min-height: 360px;
+}
+
+/* ---------------------------------------------- Contact Form */
 
 .contact-heading {
     font-family: "Exo", sans-serif;
